# task_manager_pavex

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  entrypoint.sh  fly.toml  rust-toolchain.toml
app/: Cargo.toml  build.rs
app/migrations/: 20260630102758_init.sql  20260707212457_add_completed_at.sql  20260715105638_add_last_visit.sql
app/src/: blueprint.rs  configuration.rs  jwt_auth.rs  lib.rs  rrule_input.rs  schemas.rs  session_auth.rs  session_theme.rs  static_files.rs  telemetry.rs  todo_history_job.rs  visit_tracking.rs
app/src/routes/: mod.rs
app/src/routes/api/: calendar.rs  mod.rs  todo_history.rs
app/src/routes/api/labels/: mod.rs  repo.rs
app/src/routes/api/labels/endpoints/: create_label.rs  delete_label.rs  list_labels.rs  mod.rs  update_label.rs
app/src/routes/api/todos/: mod.rs  repo.rs
app/src/routes/api/todos/endpoints/: create_todo.rs  delete_todo.rs  list_todos.rs  mod.rs  update_todo.rs
app/src/routes/api/users/: password.rs
app/src/routes/api/users/endpoints/: get_user.rs  login.rs  mod.rs  (+2 more)
app/src/routes/pages/: calendar.rs  labels.rs  login.rs  logout.rs  mod.rs  nav.rs  signup.rs  theme.rs  todo_history.rs  todos.rs
app/src/routes/users/: mod.rs  password.rs
app/src/routes/users/endpoints/: get_user.rs  login.rs  mod.rs  signup.rs  update_user.rs
app/static/: input.css  output.css
app/tailwind-bin/: daisyui-theme.mjs  daisyui.mjs
app/templates/: base.html  calendar.html  day_occurrence_row.html  flashcards.html  history.html  label_row.html  labels.html  login.html  login_result.html  nav.html  page_nav.html  signup.html  signup_result.html  todo_edit_row.html  todo_form.html  todo_row.html  todos.html
(+79 files in other folders)
